--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+couchdb (1.3.1-1.couchdb+2) unstable; urgency=low
+
+  * New upstream release.
+  * Rebase patch queue and drop patches fixed upstream.
+
+ -- Randall Leeds <randall@apache.org>  Sun, 16 Jun 2013 17:15:18 -0700
+
 couchdb (1.2.0-5) unstable; urgency=high
 
   * Fix debian/patches/series for CVE-2012-5649 and CVE-2012-5650 fixes.
